07-ingress/01/nginx.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: webapp
        image: geku/blue:latest
        ports:
        - containerPort: 80
